Fix nav dark mode

--- a/src/templates/main.css
+++ b/src/templates/main.css
@@ -8,6 +8,7 @@
 :root {
 	--colors--tint: #407fdb;
 	--colors--background: #fff;
+	--color--background-transparent: rgba(255, 255, 255, 0.9);
 	--colors--border: #eee;
 	--colors--background-secondary: #fafafa;
 	--colors--text: #111;
@@ -23,6 +24,7 @@
 	:root {
 		--colors--tint: #407fdb;
 		--colors--background: #111;
+		--color--background-transparent: rgba(1, 1, 1, 0.9);
 		--colors--border: #333;
 		--colors--background-secondary: #222;
 		--colors--text: #fff;
